# insurance-order-service/src/main/java/org/mgoes/acme/orders/controller/OrderController.java
@@ -1,12 +1,14 @@
 package org.mgoes.acme.orders.controller;
 
 import lombok.RequiredArgsConstructor;
+import org.mgoes.acme.orders.business.MediatorEvent;
+import org.mgoes.acme.orders.business.OrderLifeCycleMediator;
 import org.mgoes.acme.orders.business.OrderService;
 import org.mgoes.acme.orders.mapper.OrderMapper;
 import org.mgoes.acme.orders.openapi.api.OrdersApiDelegate;
-import org.mgoes.acme.orders.openapi.model.Order;
-import org.mgoes.acme.orders.openapi.model.OrderCreate;
+import org.mgoes.acme.orders.openapi.model.OrderCreateRequest;
 import org.mgoes.acme.orders.openapi.model.OrderCreateResponse;
+import org.mgoes.acme.orders.openapi.model.OrderResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
@@ -15,26 +17,30 @@ import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
+import static org.mgoes.acme.orders.business.MediatorEvent.CREATE_ORDER;
+
 @RequiredArgsConstructor
 @Service
 public class OrderController implements OrdersApiDelegate {
 
     private final OrderService orderService;
+    private final OrderLifeCycleMediator mediator;
 
     @Override
-    public ResponseEntity<OrderCreateResponse> createInsuranceOrder(OrderCreate orderCreate){
+    public ResponseEntity<OrderCreateResponse> createInsuranceOrder(OrderCreateRequest orderCreate){
         var order = OrderMapper.INSTANCE.toOrderEntity(orderCreate);
         order = orderService.createOrder(order);
         var response = OrderMapper.INSTANCE.toOrderCreateResponse(order);
 
+        mediator.notify(CREATE_ORDER, order.getId());
         return ResponseEntity
                 .created(URI.create("api/vi/orders/" + response.getId().toString()))
                 .body(response);
     }
 
     @Override
-    public ResponseEntity<Order> getOrder(UUID id) {
-        var optOrder = orderService.getOrderById(id);
+    public ResponseEntity<OrderResponse> getOrder(UUID id) {
+        var optOrder = orderService.getOrderById(id.toString());
 
         if(optOrder.isEmpty())
             return ResponseEntity.notFound().build();
@@ -44,12 +50,12 @@ public class OrderController implements OrdersApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<Order>> getOrders(UUID customerId) {
+    public ResponseEntity<List<OrderResponse>> getOrders(UUID customerId) {
 
         var orderList =
                 Objects.isNull(customerId) ?
                         orderService.findOrders() :
-                        orderService.findOrdersByCustomerId(customerId);
+                        orderService.findOrdersByCustomerId(customerId.toString());
 
         if(orderList.isEmpty())
             return ResponseEntity.notFound().build();
